@@ -1,0 +1,2 @@
+<h1><a href="{{ page.title|pageurl }}">{{ page.title|escape }}</a></h1>
+<div class="summary">{{ page.summary }}</div>
